Bug 253076 make clicks on canvas go into standard frame selection code. r=bzbarsky,sr=roc